# hackage-server

./: cabal.haskell-ci  hackage-server.cabal
.github/workflows/: haskell-ci.yml
