cabal-version: 3.0
name:         hackage-server
version:      0.5.1

category:     Distribution
synopsis:     The Hackage web server
description:  The new implementation of the Hackage web server, based on the
              Happstack architecture. This is the implementation used to power
              <http://hackage.haskell.org/>
              .
              It is designed to be easy to run your own instance.
              It also includes a doc builder client and a mirroring client.

author:       Duncan Coutts <duncan@community.haskell.org>,
              David Himmelstrup <lemmih@gmail.com>,
              Ross Paterson <ross@soi.city.ac.uk>,
              Matthew Gruen <wikigracenotes@gmail.com>
maintainer:   Duncan Coutts <duncan@community.haskell.org>,
              Matthew Gruen <wikigracenotes@gmail.com>
copyright:    2008-2015 Duncan Coutts,
              2012-2013 Edsko de Vries,
              2013 Google Inc.,
              2010-2011 Matthew Gruen,
              2009-2010 Antoine Latter,
              2008 David Himmelstrup,
              2007 Ross Paterson
license:      BSD-3-Clause
license-file: LICENSE

tested-with: GHC == { 9.2.3, 9.0.2, 8.10.7, 8.8.4 }

source-repository head
  type: git
  location: https://github.com/haskell/hackage-server

flag minimal
  default: False
  description: Include only the minimum feature set.
  manual: True

flag debug
  default: False
  description: Include debugging features
  manual: True

-- Requires working local outgoing email
flag test-create-user
  default: False
  manual: True

flag cabal-parsers
  description: Enable experimental @cabal-parsers@ checks
  manual: True
  default: False

----------------------------------------------------------------------------

common defaults
  default-language: Haskell2010

  build-depends:
      Cabal                 ^>= 3.8
    , ghc

  ghc-options: -Wall -fwarn-tabs -fno-warn-unused-do-bind -fno-warn-deprecated-flags -funbox-strict-fields

  if impl(ghc >= 8.2)
    ghc-options: -Werror=incomplete-patterns -Werror=missing-methods

  if impl(ghc >= 8.10)
    ghc-options: -Wno-unused-record-wildcards

  other-extensions: CPP, TemplateHaskell


library lib
  import: defaults
  hs-source-dirs:   src
  exposed-modules:
    Lib
